tests/expected_invalid_parse_variant_payload_close.diag.out
<input>:4:23: error: expected '}' after variant payload fields
                value: Int,
                          ^
